# wish-engine

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: CAPABILITIES.md  wish-engine-capabilities-for-pm.md
experiment_results/: compass_e2e_results.json  literary_time_travel.json  multi_character_results.json  quality_test_results.json  scarlett_compass_timeline.json  scarlett_shells.json  spanish_user_test.json  verification_report.json
expert_engine/: dialogue_engine.py  engine.py  goal_generator.py  llm_client.py  progress_tracker.py  session_engine.py
scripts/: 100_people_simulation.py  compass_e2e_validation.py  extract_catalogs.py  fulfiller_results.json  global_user_pdca.py  literary_time_travel_test.py  module_scores.py  multi_character_experiment.py  proactive_demo.py  quality_test_10users.py  real_data_results.json  run_verification.py  scarlett_experiment.py  simulate_10_souls.py  soul_based_journey.py  spanish_user_test.py  trisoul_stars_demo.py  validate_fulfiller.py  validate_real_data.py
tests/: test_12_free_apis.py  test_adapter.py  test_adversarial.py  test_adzuna_api.py  test_agent_negotiator.py  test_api_server.py  test_apis_100.py  test_apis_wave2.py  test_attention_coverage.py  test_book_apis.py  test_budget_calculator.py  test_calendar_filter.py  test_catalog_store.py  test_city_data.py  test_classifier.py  test_compass_contradiction.py  test_compass_e2e.py  test_compass_engine_bridge.py  test_compass_integration.py  test_compass_models.py  test_compass_persistence.py  test_compass_pure_dialogue.py  test_compass_revelation.py  test_coworking.py  (+189 more)
(+398 files in other folders)
