[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wish_engine*"]

[project]
name = "wish-engine"
version = "0.1.0"
description = "SoulMap V10 Wish Engine — detect, classify, fulfill, and render wishes"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
